# pcmeter2

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.org  main.c  meters.c  meters.h  tusb_config.h  usb_descriptors.c
kernel-module/: Makefile  Readme.org
kernel-module/src/: hid_pcmeter.c
pc-meter-daemon/: Cargo.toml  Makefile  Readme.org  pc-meterd.confd  pc-meterd.initd  pc-meterd.service
pc-meter-daemon/src/: lib.rs  main.rs
pico-firmware/: CMakeLists.txt  Readme.org
pico-firmware/src/: WS2812.cpp  main.c  main.cpp  meters.c  meters.cpp  meters.h  meters.hpp  tusb_config.h  usb_descriptors.c  ws2812.c
pico-firmware/test/: hid_test.py  hid_test_qmk.py  hid_test_set_rp.py
src/: main.c  usb_descriptors.c
